src/tests/fixtures/unions/DefineUnionTypeReferencingLiteral.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  me: Actor;
}

/** @gqlType */
class User {
  /** @gqlField */
  name: string;
}

/** @gqlUnion */
type Actor = User | "LOL";

-----------------
OUTPUT
-----------------
src/tests/fixtures/unions/DefineUnionTypeReferencingLiteral.invalid.ts:14:21 - error: Expected `@gqlUnion` union members to be type references.

If you think Grats should be able to infer this union member, please report an issue at https://github.com/captbaritone/grats/issues.

14 type Actor = User | "LOL";
                       ~~~~~
